@@ -1,6 +1,8 @@
 #include "f2c.h"
 #include "fio.h"
 
+#include <unistd.h>
+
 #ifdef KR_headers
 extern char *strcpy();
 extern FILE *tmpfile();
@@ -38,6 +40,7 @@ integer f_end(alist *a)
 	return(b->useek ? t_runc(a) : 0);
 }
 
+#ifndef HAVE_FTRUNCATE
  static int
 #ifdef KR_headers
 copy(from, len, to) FILE *from, *to; register long len;
@@ -56,6 +59,7 @@ copy(FILE *from, register long len, FILE *to)
 		}
 	return 0;
 	}
+#endif /* !defined(HAVE_FTRUNCATE) */
 
  int
 #ifdef KR_headers
@@ -66,8 +70,11 @@ t_runc(alist *a)
 {
 	long loc, len;
 	unit *b;
-	FILE *bf, *tf;
-	int rc = 0;
+	int rc;
+	FILE *bf;
+#ifndef HAVE_FTRUNCATE
+	FILE *tf;
+#endif /* !defined(HAVE_FTRUNCATE) */
 
 	b = &f__units[a->aunit];
 	if(b->url)
@@ -77,6 +84,8 @@ t_runc(alist *a)
 	len=ftell(bf);
 	if (loc >= len || b->useek == 0 || b->ufnm == NULL)
 		return(0);
+#ifndef HAVE_FTRUNCATE
+	rc = 0;
 	fclose(b->ufd);
 	if (!loc) {
 		if (!(bf = fopen(b->ufnm, f__w_mode[b->ufmt])))
@@ -118,6 +127,10 @@ done1:
 	fclose(tf);
 done:
 	f__cf = b->ufd = bf;
+#else  /* !defined(HAVE_FTRUNCATE) */
+	fflush(b->ufd);
+	rc = ftruncate(fileno(b->ufd),loc);
+#endif /* !defined(HAVE_FTRUNCATE) */
 	if (rc)
 		err(a->aerr,111,"endfile");
 	return 0;
